update form and animations

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="hero-section-info">
             <p>Косметологічна клініка</p>
             <h1 class="hero-title">Beauty Zone</h1>
-            <button type="button" class="button hero-button">
+            <button type="button" class="button hero-button modal-btn-open">
               Замовити дзвінок
             </button>
             <p class="hero-section-text">
@@ -317,5 +317,18 @@
         </div>
       </div>
     </footer>
+     <div class="backdrop is-hidden">
+      <div class="modal">
+        <h2  class="modal-title">Замовити <br>дзвінок</h2>
+        <button type="button" class="modal-btn-close">Close</button>
+        <form class="modal-form" name="modal-form" autocomplete="on">
+<div></div>
+<div></div>
+<div></div>
+<button type="submit" class="button modal-button">Записатись безкоштовно</button>
+
+        </form>
+        <p class="modal-text">Натискаючи на кнопку я погоджуюсь <br> <a class="modal-link" href="#"> з політикою конфіденційності</a></p>
+     <script src="./modal.js"></script>
   </body>
 </html>
