--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
                 >Україна, м. Київ, бул. Тараса Шевченка 5</a
               >
             </li>
-            <div class="footer-social-media"><li>
+            <div class="footer-social-media">
+              <li>
               <a href="tel:+380960000007"
                 ><img
                   src="./images/telephone-ico-light.svg"
@@ -374,7 +375,7 @@
                 та отримайте подарунок</p>
               <div>
           <input type="text"
-          id="name-surname" 
+          id="name-surname-modal" 
           name="name-surname" 
           class="form-input"
           placeholder="Ваше ім'я та прізвище"
@@ -382,13 +383,13 @@
           required
           minlength="2"
           maxlength="20">
-        <label for="name-surname" class="form-label visually-hidden">
+        <label for="name-surname-modal" class="form-label visually-hidden">
         Ваше ім'я та прізвище
         </label>
         </div>
                       <div>
                           <input type="tel"
-                          id="telephone-number" 
+                          id="telephone-number-modal" 
                           name="telephone-number"
                           class="form-input"
                           pattern="^\+[0-9]{12}"
@@ -396,19 +397,19 @@
                           maxlength="13"
                           required
                           placeholder="Ваш номер телефону">
-                      <label for="telephone-number" class="form-label visually-hidden">
+                      <label for="telephone-number-modal" class="form-label visually-hidden">
                       Ваш номер телефону
                       </label>
                       </div>
                   <div>
                       <input type="email"
-                        id="email"
+                        id="email-modal"
                         name="email"
                         class="form-input"
                         placeholder="Ваша електронна пошта"
                         required
                         pattern="^\S+@\S+\.\S+$">
-                  <label for="email" class="form-label visually-hidden">
+                  <label for="email-modal" class="form-label visually-hidden">
                   Ваша електронна пошта
                   </label>
                   </div>
